# Tableau-Metadata-Exporter

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  README.md  create_tables.sql  main.py  package-lock.json  package.json  pyproject.toml  renovate.json  settings.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml  update.yaml
SQL/: DatasourceFields.sql  Groups.sql  HierarchyProjAndWork.sql  HierarchyWorkAndView.sql  Projects.sql  RunData.sql  Subscriptions.sql  Users.sql  Views.sql  Workbooks.sql
