[tool.poetry]
name = "TableauSQL"
version = "1.0.4-alpha.1"
description = "Tableau Metadata Scraper"
authors = ["Sean Pickering", "Christopher Pickering"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8.2"
lxml = "^4.9.1"
tox = "^4.0.0"
pyodbc = "^4.0.30"
mysql-connector-python = "^8.0.23"
psycopg2 = "^2.8.6"
paramiko = "^3.0.0"
pre-commit = "^3.0.0"
sqlfluff = "^2.0.0"
requests = "^2.25.1"
python-dotenv = "^1.0.0"


[tool.poetry.dev-dependencies]
pre-commit = "^3.0.0"
isort = "^5.10.1"
black = "^23.0.0"
ruff = "^0.0.265"

[tool.black]
max_line_length = 99
exclude = '''
    /(
        \.git
      | \.tox
      | \.venv

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/
    '''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99
quiet = true
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 146
select = [
    "A",
    "C4",
    "D",
    "DJ",
    "E",
    "F",
    "I",
    "N",
    "PL",
    "PT",
    "SIM",
    "T20",
    "W",
]
target-version = "py311"
ignore = ["D203", "D213", "E501", "SIM112"]
